# MS_I3

./: .gitignore  LICENSE  README.md  index.html
2024_2025/Seance01/Exemples01/Exemple0/src/: main.c
2024_2025/Seance01/Exemples01/Exemple1/src/: calcul.cxx
2024_2025/Seance01/Exemples01/Exemple2/src/: CMakeLists.txt  Matrice.cxx  calcul.cxx  init.cxx
2024_2025/Seance01/Exemples01/Exemple3/: build.py  run.py
2024_2025/Seance01/Exemples01/Exemple3/src/: main.c
2024_2025/Seance01/Exemples01/Exemple4/src/: CMakeLists.txt  timer.h
2024_2025/Seance01/Exemples01/Exemple5/src/: CMakeLists.txt  matrix.cxx  matrix.hxx  matrix_bloc.cxx
2024_2025/Seance01/Exemples01/Exemple6/src/: main0.cxx  main0c.cxx  main1.cxx  main1b.cxx
2024_2025/Seance01/Exemples01/Exemple6/src/tools/: CMakeLists.txt
2024_2025/Seance01/Exemples01/tools/: timer.hxx
current/: Seances_MS_I3.html  index.html
current/Cours01/Exemples01/Exemple0/src/: CMakeLists.txt  main2.c  run_gprof.py
current/Cours01/Exemples01/Exemple1/: run.py
current/Cours01/Exemples01/Exemple1/src/: CMakeLists.txt  calcul.hxx  init.cxx  init.hxx  main.cxx
current/Cours01/Exemples01/Exemple2/: run.py
current/Cours01/Exemples01/Exemple2/src/: Matrice.hxx  calcul.hxx  init.hxx  main.cxx
current/Cours01/Exemples01/Exemple3/: build.py
current/Cours01/Exemples01/Exemple3/src/: CMakeLists.txt  calcul.c  calcul.h  init.c  init.h
current/Cours01/Exemples01/Exemple3/src/tools/: timer.hxx
current/Cours01/Exemples01/Exemple4/src/: calcul.c  calcul.h  main.c  timer.c
current/Cours01/Exemples01/Exemple5/src/: main.cxx  main_bloc.cxx  matrix_bloc.hxx
current/Cours01/Exemples01/Exemple6/src/: CMakeLists.txt  main0b.cxx  main1c.cxx
current/Cours01/Exemples01/Exemple6/src/tools/: timer.cxx
current/Cours03/Exemples03/omp_sections/: build.py  run.py
current/Cours03/Exemples03/omp_sections/src/: CMakeLists.txt  main_sections.cxx
current/Cours03/Exemples03/omp_taches/: build.py  run.py
current/Cours03/Exemples03/omp_taches/src/: CMakeLists.txt  main_seq.cxx  main_tasks.cxx
current/Cours03/Exemples03/omp_taches/src/tools/: arguments.cxx
current/Cours03/Exemples03/sinus/: run.py
current/Cours03/Exemples03/sinus/src/: CMakeLists.txt
current/Cours03/Exemples03/sinus/src/common/: CMakeLists.txt  calcul.hxx  save.cxx  save.hxx  sin.cxx  sin.hxx  stat.cxx  stat.hxx
current/Cours03/Exemples03/sinus/src/sinus_omp_adaptatif/: CMakeLists.txt  calcul.cxx  charge.cxx  charge.hxx  main.cxx  parameters.hxx
current/Cours03/Exemples03/sinus/src/sinus_omp_coarse_grain/: CMakeLists.txt  main.cxx  parameters.cxx
current/Cours03/Exemples03/sinus/src/sinus_omp_fine_grain/: CMakeLists.txt  calcul.cxx  main.cxx  parameters.cxx  parameters.hxx
current/Cours03/Exemples03/sinus/src/sinus_omp_tasks/: CMakeLists.txt  main.cxx  parameters.cxx  parameters.hxx
current/Cours03/Exemples03/sinus/src/sinus_seq/: CMakeLists.txt  parameters.cxx  parameters.hxx
current/Cours03/Exemples03/sinus/src/sinus_tbb/: CMakeLists.txt  calcul.cxx  main.cxx
current/Cours03/Exemples03/sinus/src/tools/: arguments.cxx
current/Cours03/Exemples03/std_threads/: build.py  run.py
current/Cours03/Exemples03/std_threads/src/: CMakeLists.txt  main_par.cxx  main_seq.cxx  matrix.cxx  matrix.hxx  multiplier.hxx  test.cxx
current/Cours03/Exemples03/tbb/: build.py  run.py
current/Cours03/Exemples03/tbb/src/: CMakeLists.txt  main_par.cxx  main_seq.cxx  multiplier.hxx
current/Cours03/Exemples03/tbb/src/tools/: CMakeLists.txt
current/Cours03/Exemples03/tbb2/: build.py  install.sh
current/Cours03/Exemples03/tbb2/src/: CMakeLists.txt  main_par.cxx  main_seq.cxx  multiplier.hxx
current/Cours03/Exemples03/tbb2/src/tools/: timer.cxx
current/Cours03/NCorps/: .gitignore
current/Cours03/NCorps/correction/CPU/openmp/: systemCPU_OpenMP.hxx
current/Cours03/NCorps/correction/communs/: arguments.hxx  communs.cmake  os.hxx
current/Cours03/NCorps/src/: main.cxx.in
current/Cours03/NCorps/src/CPU/: systemCPU.hxx
current/Cours03/NCorps/src/CPU/openmp/: systemCPU_OpenMP.cxx
current/Cours03/NCorps/src/CPU/tbb/: systemCPU_TBB.cxx  systemCPU_TBB.hxx
current/Cours03/NCorps/src/CPU/threads/: systemCPU_THREADS.cxx  systemCPU_THREADS.hxx
current/Cours03/NCorps/src/communs/: binary.hxx  display.cxx  display.hxx
current/Cours03/NCorps_03/: .gitignore  README.md  build.py  build_correction.py
current/Cours03/NCorps_03/correction/CPU/serial/: CMakeLists.txt  systemCPU_Serial.hxx
current/Cours03/NCorps_03/correction/CPU/tbb/: CMakeLists.txt  systemCPU_TBB.cxx
current/Cours03/NCorps_03/correction/CPU/threads/: systemCPU_THREADS.hxx
current/Cours03/NCorps_03/correction/communs/: CMakeLists.txt  FindGLFW3.cmake  communs.cmake  parameters.cxx  parameters.hxx  system.cxx  timerGPU.hxx  urand.hxx
current/Cours03/NCorps_03/src/CPU/openmp/: CMakeLists.txt  systemCPU_OpenMP.cxx
current/Cours03/NCorps_03/src/CPU/tbb/: systemCPU_TBB.cxx  systemCPU_TBB.hxx
current/Cours03/NCorps_03/src/CPU/threads/: systemCPU_THREADS.cxx
current/Cours03/NCorps_03/src/communs/: CMakeLists.txt  check_cuda.cuh  communs.cmake  system.cxx  timer.cxx  timer.hxx  type.hxx
current/Cours03/temp/NCorps_03/: build.py  build_correction.py
current/Cours03/temp/NCorps_03/src/CPU/serial/: systemCPU_Serial.cxx
current/Cours03/temp/NCorps_03/src/CPU/threads/: CMakeLists.txt
current/Cours03/temp/NCorps_03/src/communs/: os.cxx  system.hxx
current/index_files/: style.css
